Edição do README do projeto e edição das pastas

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <title>Página Inicial</title>
-    <meta name="description" content="Página de aprendizado para o básico sobre Hipertextos, utilizando a prática como forma de estudo.">
+    <meta name="description" content="Página de aprendizado para o básico sobre Hipertextos e manipulação do DOM, utilizando a prática como forma de estudo.">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, inicial-scale=1.0"/>
     <meta name="author" content="Gabriel Delabenetta">
@@ -18,8 +18,8 @@
             <ul>
                 <li class="texto"><a href="#inicial">Home</a></li>
                 <li class="texto"><a href="https://github.com/VitorDelabenetta" target="_blank">Projetos</a></li>
-                <li class="texto"><a href="./landing-page/landing.html">Saiba Mais</a></li>
-                <li class="texto"><a href="./formulario/form.html">Contato</a></li>
+                <li class="texto"><a href="./paginas/landing-page/landing.html">Saiba Mais</a></li>
+                <li class="texto"><a href="./paginas/formulario/form.html">Contato</a></li>
             </ul>
         </nav>
     </header>
