--- a/paginas/formulario/form.html
+++ b/paginas/formulario/form.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, inicial-scale=1.0"/>
     <meta name="author" content="Gabriel Delabenetta">
-    <link rel="stylesheet" type="text/css" href="../assets/estilos/padroes.css">
-    <link rel="stylesheet" type="text/css" href="../assets/estilos/formulario.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/estilos/padroes.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/estilos/formulario.css">
 </head>
 <body>
     <main>
@@ -33,7 +33,7 @@
             </div>
         </form>
     </main>
-    <script src="../assets/scripts/formulario.js"></script>
+    <script src="../../assets/scripts/formulario.js"></script>
 
     <!-- Fonte referencial para a estrutura do formulário: https://youtu.be/QT1ya4Ut40o -->
 
