--- a/paginas/landing-page/landing.html
+++ b/paginas/landing-page/landing.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, inicial-scale=1.0"/>
     <meta name="author" content="Gabriel Delabenetta">
-    <link rel="stylesheet" type="text/css" href="../assets/estilos/padroes.css">
-    <link rel="stylesheet" type="text/css" href="../assets/estilos/landing-page.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/estilos/padroes.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/estilos/landing-page.css">
 </head>
 <body>
     <header class="template-grid">
@@ -16,9 +16,9 @@
         </div>
         <nav class="cabecalho-direita">
             <ul>
-                <li class="texto"><a href="../index.html">Home</a></li>
+                <li class="texto"><a href="../../index.html">Home</a></li>
                 <li class="texto"><a href="https://github.com/VitorDelabenetta" target="_blank">Projetos</a></li>
-                <li class="texto"><a href="../formulario/form.html">Contato</a></li>
+                <li class="texto"><a href="../../paginas/formulario/form.html">Contato</a></li>
                 <li class="texto" id="inscrever"><a href="#">Contratou algum serviço?</a></li>
             </ul>
         </nav>
@@ -35,7 +35,7 @@
             </form>
         </div>
         <div class="conteudo-direita">
-            <img src="../assets/imagens/newsletter.svg">
+            <img src="../../assets/imagens/newsletter.svg">
         </div>
     </main>
 </body>
